crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__small_inline__builtin_failure.snap
---
source: crates/nash-codegen/src/optimizer_tests/small_inline.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- baseline uplc\\n{}\\n--- optimized uplc\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let divide#2 : int -> int = \x#1 : int -> divideInteger 10 x#1 in
let anf#3 : int = trace "zero" in 0 in
let anf#4 : int = divide#2 anf#3 in
let anf#5 : int = trace "cold" in 1 in
let anf#6 : int = divide#2 anf#5 in
addInteger anf#4 anf#6
--- core after
let anf#3 : int = trace "zero" in 0 in
let anf#4 : int = divideInteger 10 anf#3 in
let anf#5 : int = trace "cold" in 1 in
let anf#6 : int = divideInteger 10 anf#5 in
addInteger anf#4 anf#6
--- baseline uplc
(program 1.1.0
  [(lam divide_2
    [(lam anf_3
      [(lam anf_4
        [(lam anf_5 [(lam anf_6 [[(builtin addInteger) anf_4] anf_6]) [divide_2 anf_5]])
          (force [[(force (builtin trace)) (con string "cold")] (delay (con integer 1))])])
        [divide_2 anf_3]])
      (force [[(force (builtin trace)) (con string "zero")] (delay (con integer 0))])])
    (lam x_1 [[(builtin divideInteger) (con integer 10)] x_1])])
--- optimized uplc
(program 1.1.0
  [(lam anf_3
    [(lam anf_4
      [(lam anf_5
        [(lam anf_6 [[(builtin addInteger) anf_4] anf_6])
          [[(builtin divideInteger) (con integer 10)] anf_5]])
        (force [[(force (builtin trace)) (con string "cold")] (delay (con integer 1))])])
      [[(builtin divideInteger) (con integer 10)] anf_3]])
    (force [[(force (builtin trace)) (con string "zero")] (delay (con integer 0))])])
--- result
error: Runtime(DivisionByZero(10, 0))
--- logs
["zero"]
