crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__small_inline__partial_calls.snap
---
source: crates/nash-codegen/src/optimizer_tests/small_inline.rs
assertion_line: 37
expression: "crate::harness::pass_snapshot(b.arena, core,\nformat!(\"--- core before\\n{}\\n--- baseline uplc\\n{}\\n--- core after\\n{}\\n--- optimized uplc\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), baseline.uplc, pretty(after), candidate.uplc,\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
let add#3 : int -> int -> int = \x#1 : int y#2 : int -> addInteger x#1 y#2 in
addInteger (add#3 10 1) (addInteger (add#3 20 1) (add#3 3 4))
--- unoptimized UPLC
(program 1.1.0
  [(lam add_3
    [[(builtin addInteger) [[add_3 (con integer 10)] (con integer 1)]]
      [[(builtin addInteger) [[add_3 (con integer 20)] (con integer 1)]]
        [[add_3 (con integer 3)] (con integer 4)]]])
    (lam x_1 (lam y_2 [[(builtin addInteger) x_1] y_2]))])
--- optimized Core
let add#6 : int -> int -> int = \x#4 : int y#5 : int -> addInteger x#4 y#5 in
let anf#7 : int -> int = add#6 10 in
let anf#8 : int = anf#7 1 in
let anf#9 : int -> int = add#6 20 in
let anf#10 : int = anf#9 1 in
let anf#11 : int = addInteger 3 4 in
let anf#12 : int = addInteger anf#10 anf#11 in
addInteger anf#8 anf#12
--- optimized UPLC
(program 1.1.0
  [(lam add_3
    [(lam anf_13
      [(lam anf_14
        [(lam anf_15
          [(lam anf_16
            [(lam anf_17
              [(lam anf_18 [[(builtin addInteger) anf_14] anf_18])
                [[(builtin addInteger) anf_16] anf_17]])
              [[(builtin addInteger) (con integer 3)] (con integer 4)]])
            [anf_15 (con integer 1)]])
          [add_3 (con integer 20)]])
        [anf_13 (con integer 1)]])
      [add_3 (con integer 10)]])
    (lam x_1 (lam y_2 [[(builtin addInteger) x_1] y_2]))])
--- isolated pass
--- core before
let add#3 : int -> int -> int = \x#1 : int y#2 : int -> addInteger x#1 y#2 in
let anf#4 : int -> int = add#3 10 in
let anf#5 : int = anf#4 1 in
let anf#6 : int -> int = add#3 20 in
let anf#7 : int = anf#6 1 in
let anf#8 : int = add#3 3 4 in
let anf#9 : int = addInteger anf#7 anf#8 in
addInteger anf#5 anf#9
--- baseline uplc
(program 1.1.0
  [(lam add_3
    [(lam anf_4
      [(lam anf_5
        [(lam anf_6
          [(lam anf_7
            [(lam anf_8
              [(lam anf_9 [[(builtin addInteger) anf_5] anf_9])
                [[(builtin addInteger) anf_7] anf_8]])
              [[add_3 (con integer 3)] (con integer 4)]])
            [anf_6 (con integer 1)]])
          [add_3 (con integer 20)]])
        [anf_4 (con integer 1)]])
      [add_3 (con integer 10)]])
    (lam x_1 (lam y_2 [[(builtin addInteger) x_1] y_2]))])
--- core after
let add#3 : int -> int -> int = \x#1 : int y#2 : int -> addInteger x#1 y#2 in
let anf#4 : int -> int = add#3 10 in
let anf#5 : int = anf#4 1 in
let anf#6 : int -> int = add#3 20 in
let anf#7 : int = anf#6 1 in
let anf#8 : int = addInteger 3 4 in
let anf#9 : int = addInteger anf#7 anf#8 in
addInteger anf#5 anf#9
--- optimized uplc
(program 1.1.0
  [(lam add_3
    [(lam anf_4
      [(lam anf_5
        [(lam anf_6
          [(lam anf_7
            [(lam anf_8
              [(lam anf_9 [[(builtin addInteger) anf_5] anf_9])
                [[(builtin addInteger) anf_7] anf_8]])
              [[(builtin addInteger) (con integer 3)] (con integer 4)]])
            [anf_6 (con integer 1)]])
          [add_3 (con integer 20)]])
        [anf_4 (con integer 1)]])
      [add_3 (con integer 10)]])
    (lam x_1 (lam y_2 [[(builtin addInteger) x_1] y_2]))])
--- result
(con integer 39)
--- logs
[]
